--- a/src/app/chat/components/project-breef-filling/project-brief-filling.component.html
+++ b/src/app/chat/components/project-breef-filling/project-brief-filling.component.html
@@ -38,7 +38,7 @@
             </div>
 </div>
 <div class="btns">
-    <button class="btn-sec" (click)="deleteBrief()">{{'general.cancel' | translate}}</button>
+    <button class="btn-sec" (click)="deleteBrief()">{{'general.decline' | translate}}</button>
     <button class="btn" (click)="sendBrief()">{{'general.send' | translate}}</button>
 </div>
 </form>
