--- a/src/app/chat/components/brief-message-showing/brief-message-showing.component.html
+++ b/src/app/chat/components/brief-message-showing/brief-message-showing.component.html
@@ -25,7 +25,7 @@
     </div>
     <button class="btn-third brief-wrap-btn" (click)="showHideBrief()" [ngClass]="isBriefElVisible? 'up': 'down'"> {{ buttonText }}</button>
     <div class="brief-decisions-options" *ngIf="collocutorData.freelancer_id === userId && collocutorData.status == 'sentBrief' && !dealApproved && collocutorData.early_closing === 0">
-        <button class="btn-sec" (click)="refuseBrief()">{{'general.cancel' | translate}}</button>
+        <button class="btn-sec" (click)="refuseBrief()">{{'general.decline' | translate}}</button>
         <button class="btn" (click)="approveBrief()">{{'chat.breef.message.succes' | translate}}</button>
     </div>
 </div>
