--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -16,44 +16,40 @@
                 <button (click)="userExit()">{{'general.exit' | translate}}</button>
             </section>
         </div>
-        </section>
-        <section class="exit">
-            <button (click)="userExit()">Выйти</button>
-        </section>
-</div>
-</header>
-<div class="side-bar" [ngClass]='{simplified: sideMenuClose}'>
-    <section class="avatar">
-        <div class="lines"></div>
-        <div class="avatar-wrapper">
-            <div class="avatar-aura">
-                <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 0">
-                <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 1">
-                <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 2">
-                <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 3">
-                <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 4">
+        <!-- </div> -->
+    </header>
+    <div class="side-bar" [ngClass]='{simplified: sideMenuClose}'>
+        <section class="avatar">
+            <div class="lines"></div>
+            <div class="avatar-wrapper">
+                <div class="avatar-aura">
+                    <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 0">
+                    <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 1">
+                    <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 2">
+                    <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 3">
+                    <img src="assets/images/images/aura_lvl2.svg" alt="user-lvl" *ngIf="user.rank_id === 4">
+                </div>
+                <img [src]="user.avatar" alt="avatar" />
             </div>
-            <img [src]="user.avatar" alt="avatar" />
-        </div>
-        <p class="name">{{ user.name }} {{ user.surname}}</p>
-        <div class="rating">
-            <app-star-rating [currentRating]="user.rating"></app-star-rating>
-        </div>
-    </section>
-    <section class="menu">
-        <nav>
-            <ng-container *ngFor="let el of dashboardMenu">
-                <a class="{{el.class}}" *ngIf="user.role_id === 1 && el.class !== 'catalog' && el.class !== 'arbitr' ||
+            <p class="name">{{ user.name }} {{ user.surname}}</p>
+            <div class="rating">
+                <app-star-rating [currentRating]="user.rating"></app-star-rating>
+            </div>
+        </section>
+        <section class="menu">
+            <nav>
+                <ng-container *ngFor="let el of dashboardMenu">
+                    <a class="{{el.class}}" *ngIf="user.role_id === 1 && el.class !== 'catalog' && el.class !== 'arbitr' ||
             user.role_id === 2 &&
             el.class !== 'services' && el.class !== 'arbitr' ||
             (user.role_id === 42 && el.class !== 'services' && el.class !== 'settings' && el.class !== 'projects')
             " [routerLink]="el.link | localize" [routerLinkActive]="'active'" (click)="openChat(el.class)" [ngClass]="{ 'new-message': newMessage, 'new-work-message': newWorkMessage }"><span>{{ el.title | translate }}</span></a>
-            </ng-container>
-        </nav>
-    </section>
-    <div class="toggleMenuBtn" (click)='toggleSideMenu()'></div>
-</div>
-<div class="content-part">
-    <router-outlet></router-outlet>
-</div>
+                </ng-container>
+            </nav>
+        </section>
+        <div class="toggleMenuBtn" (click)='toggleSideMenu()'></div>
+    </div>
+    <div class="content-part">
+        <router-outlet></router-outlet>
+    </div>
 </div>
