--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper" *ngIf="achivements">
-    <h4>{{'dashboard.ranks.title' | translate}} <button class="ask"></button></h4>
+    <h4>{{'dashboard.home-page.ranks.title' | translate}}
+        <!-- <button class="ask"></button> -->
+    </h4>
 
     <div class="main-status">
-        <p>{{'dashboard.ranks.subtitle' | translate}}</p>
+        <p>{{'dashboard.home-page.ranks.subtitle' | translate}}</p>
         <div>
             <div class="line-wrap">
                 <div *ngFor="let el of ranks" class="dot {{ el.class}}" [ngClass]="{'done': el.rank <= achivements.rank_id }">
