--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
@@ -1,21 +1,21 @@
 <div class="wrapper">
-  <div class="steps">
-    <h3>Создание услуги</h3>
-    <div class="steps-wrap" *ngIf="userService" [ngClass]="{hideStepOne: userService.step === 4, hideStepTwo: userService.step >= 5}">
-      <div class="step" *ngFor="let step of serviceCreationSteps, let i = index " (click)="goToStep(i+1)" [ngClass]="{dev: userService.step === i+1, done: userService.step > i+1 }">
-        <h5>{{ step.title }}</h5>
-        <p>{{ step.description }}</p>
-        <span class="step-order">{{ i+1 }}</span>
-      </div>
+    <div class="steps">
+        <h3>{{'dashboard.create-service.title' | translate}}</h3>
+        <div class="steps-wrap" *ngIf="userService" [ngClass]="{hideStepOne: userService.step === 4, hideStepTwo: userService.step >= 5}">
+            <div class="step" *ngFor="let step of serviceCreationSteps, let i = index " (click)="goToStep(i+1)" [ngClass]="{dev: userService.step === i+1, done: userService.step > i+1 }">
+                <h5>{{ step.title |translate }}</h5>
+                <p>{{ step.description | translate }}</p>
+                <span class="step-order">{{ i+1 }}</span>
+            </div>
 
+        </div>
     </div>
-  </div>
-  <div class="step-detail">
-    <app-first-step-service-creation *ngIf="userService && userService.step === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(1)"></app-first-step-service-creation>
-    <app-second-step-creation *ngIf="userService && userService.step === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(2)"></app-second-step-creation>
-    <app-third-step-creation *ngIf="userService && userService.step === 3" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(3)"></app-third-step-creation>
-    <app-fourth-step-creation *ngIf="userService && userService.step === 4" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(4)"></app-fourth-step-creation>
-    <app-fifth-step-creation *ngIf="userService && userService.step === 5" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(5)"></app-fifth-step-creation>
-    <app-last-step-creation class="last" *ngIf="userService && userService.step === 6" [userService]="userService"></app-last-step-creation>
-  </div>
+    <div class="step-detail">
+        <app-first-step-service-creation *ngIf="userService && userService.step === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(1)"></app-first-step-service-creation>
+        <app-second-step-creation *ngIf="userService && userService.step === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(2)"></app-second-step-creation>
+        <app-third-step-creation *ngIf="userService && userService.step === 3" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(3)"></app-third-step-creation>
+        <app-fourth-step-creation *ngIf="userService && userService.step === 4" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(4)"></app-fourth-step-creation>
+        <app-fifth-step-creation *ngIf="userService && userService.step === 5" [userService]="userService" (setCurrentStep)="setCurrentStep($event)" (click)="goToStep(5)"></app-fifth-step-creation>
+        <app-last-step-creation class="last" *ngIf="userService && userService.step === 6" [userService]="userService"></app-last-step-creation>
+    </div>
 </div>
