--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
@@ -86,8 +86,8 @@
         </div>
 
         <div class="form-butons">
-            <button class="back" type="button">выйти</button>
-            <button class="save" type="submit">сохранить и продолжить</button>
+            <button class="back" type="button">{{'general.exit' | translate}}</button>
+            <button class="save" type="submit">{{'dashboard.create-service.save-and-next' | translate}}</button>
         </div>
     </form>
 </div>
